js/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --main-hue: 150deg;
  --light-border: hsl(var(--main-hue) 50% 80%);
  --link: hsl(var(--main-hue) 80% 25%);
  --link-visited: hsl(var(--main-hue) 100% 15%);
  --body-text: hsl(var(--main-hue) 60% 10%);
  --background: hsl(var(--main-hue) 60% 90%);
  @media (prefers-color-scheme: dark) {
    --body-text: hsl(var(--main-hue) 60% 80%);
    --background: hsl(var(--main-hue) 60% 5%);
    --link: hsl(var(--main-hue) 60% 65%);
    --link-visited: hsl(var(--main-hue) 60% 35%);
    --light-border: hsl(var(--main-hue) 50% 15%);
  }
}

body {
  font-family: ui-sans-serif, system-ui, sans-serif;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background: var(--background);
  color: var(--body-text);
  font-size: 18px;
}

footer {
  border-top: 3px solid var(--light-border);
  padding: 0 1rem;
}

.footer-content {
  margin: 1rem auto;
  max-width: 58rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

@media (prefers-color-scheme: dark) {
  footer img {
    filter: invert();
  }
}

ul,
ol {
  margin-bottom: 1rem;
  margin-left: 1rem;
}

a {
  color: var(--link);
}

a:visited {
  color: var(--link-visited);
}

header {
  border-bottom: 3px solid var(--light-border);
  padding: 1rem;
}

.header-content {
  margin: 0 auto;
  max-width: 60rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-content > div {
  display: flex;
  align-items: center;
  gap: 1rem;
}

main {
  width: calc(min(62rem, 100%));
  flex: 1;
  margin: 4rem auto;
  padding: 0 1rem;
}

.content {
  padding: 1rem;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  gap: 0.6rem;
  max-width: 65ch;
}

.content li + li {
  margin-top: 0.6rem;
}

#challenges {
  padding: 1rem;
}

#challenges ul {
  display: flex;
  flex-direction: column;
  list-style-type: none;
}

#challenges li {
  display: block;
  padding: 0.6rem;
}

#challenges li + li {
  border-top: 3px solid var(--light-border);
}

textarea {
  width: 100%;
  height: 8rem;
  font-family: monospace;
  border: 1px solid var(--light-border);
}

textarea:focus-within {
  outline: none;
}

.cm-editor {
  --editor-bg: #fff;
  @media (prefers-color-scheme: dark) {
    --editor-bg: hsl(var(--main-hue) 100% 3%);
  }
  border: 1px solid rgb(227, 227, 227);
  min-height: 8rem;
  background-color: var(--editor-bg);
}
.cm-gutters {
  background-color: inherit !important;
}

.cm-editor:focus-within,
textarea:focus-within {
  border: 1px solid #27534a;
}

.test-pass {
  background-color: #7dca8c;
}

.test-fail {
  background-color: #ff4444;
}

.test-warning {
  background-color: yellow;
}

.test-info {
  background-color: #ddd;
}

@media (min-width: 1000px) {
  .two-column-description {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 2rem;
  }

  #jump-challenges {
    display: none;
  }
}

.leaderboard table tr:not(:last-child) > td {
  border-bottom: 1px solid black;
}

.leaderboard table {
  width: 100%;
}

.leaderboard table th:first-child {
  width: 1rem;
}

.leaderboard table img {
  width: 18px;
}

.leaderboard table th:last-child {
  width: 4rem;
}

.leaderboard table td:last-child {
  text-align: right;
}

table {
  border-collapse: collapse;
}

th {
  text-align: left;
}

.warning {
  background-color: #dddd44;
  padding: 0.5rem;
  margin: 0.5rem 0;
}

button {
  padding: 0.5rem 1rem;
  border: 1px solid black;
  border-radius: 0;
}

.hidden {
  display: none;
}

#editor-controls {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.validation-error {
  color: red;
}

.lang > img {
  vertical-align: middle;
  width: 32px;
  height: 32px;
  @media (prefers-color-scheme: dark) {
    filter: invert(90%);
  }
}

.tabs {
  display: flex;
  flex-wrap: wrap;
  --tab-bg: hsl(var(--main-hue) 70% 85%);
  --active-tab-bg: hsl(var(--main-hue) 60% 90%);
  --active-tab-color: var(--link);
  --tab-border: hsl(var(--main-hue) 80% 40%);
  --tab-border-between: hsl(var(--main-hue) 50% 70%);
  @media (prefers-color-scheme: dark) {
    --tab-bg: hsl(var(--main-hue) 70% 10%);
    --active-tab-bg: hsl(var(--main-hue) 60% 15%);
    --active-tab-color: hsl(var(--main-hue) 80% 50%);
    --tab-border-between: hsl(var(--main-hue) 50% 20%);
  }
}

.tabs :visited {
  color: inherit;
}

.tab {
  background-color: var(--tab-bg);
  border-bottom: 2px solid var(--tab-border);
  padding: 0.3rem;
  color: unset;
  font-size: unset;

  &:not(:first-child) {
    border-left: 2px solid var(--tab-border-between);
  }
}

.tab.active {
  background-color: var(--active-tab-bg);
  color: var(--active-tab-color);
  border: 2px solid var(--tab-border);
  border-bottom: 2px solid var(--active-tab-bg);

  & + .tab {
    border-left-color: var(--tab-bg);
  }
}

/* Test Case Related */
@media (prefers-color-scheme: dark) {
  .test-case {
    color: black;
  }
}

.test-case-header {
  display: flex;
  justify-content: end;
  height: 3rem;
}

.test-case-title {
  flex-grow: 1;
}

.test-case-columns {
  display: grid;
  grid-template-columns: repeat(var(--columns), minmax(0, 1fr));
  gap: 0.5rem;
  height: 17rem;
  overflow-y: auto;

  & .code-pre {
    height: unset;
    min-height: 15rem;
    overflow-y: visible;
  }
}

.test-case-1-columns {
  --columns: 1;
}

.test-case-2-columns {
  --columns: 2;
}

.test-case-3-columns {
  --columns: 3;
}

.test-case {
  margin-bottom: 1rem;
  padding: 0.5rem;
}

.code-pre {
  background-color: white;
  padding: 1rem;
  overflow-x: auto;
  height: 15rem;
  overflow-y: auto;
  color: black;
}

.lang-icon {
  vertical-align: middle;
}

